notion of amLimit in SingleQueuePolicy + SRTF tests