@@ -1,9 +1,9 @@
-package org.apache.hadoop.tools.posum.scheduler.portfolio;
+package org.apache.hadoop.tools.posum.scheduler.portfolio.srtf;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
-import org.apache.hadoop.tools.posum.scheduler.portfolio.extca.ExtCaAppAttempt;
+import org.apache.hadoop.tools.posum.scheduler.portfolio.singleq.SQSAppAttempt;
 import org.apache.hadoop.yarn.api.records.ApplicationAttemptId;
 import org.apache.hadoop.yarn.api.records.Resource;
 import org.apache.hadoop.yarn.server.resourcemanager.RMContext;
@@ -15,7 +15,7 @@ import java.text.MessageFormat;
 
 import static org.apache.hadoop.tools.posum.common.util.Utils.orZero;
 
-public class SRTFAppAttempt extends ExtCaAppAttempt {
+public class SRTFAppAttempt extends SQSAppAttempt {
   private static final Log logger = LogFactory.getLog(SRTFAppAttempt.class);
 
   private Long submitTime;
@@ -23,14 +23,14 @@ public class SRTFAppAttempt extends ExtCaAppAttempt {
   private Long totalWork;
   private Long remainingWork;
   // FIXME: in the future should be resources, not just memory ints
-  private Integer resourceDeficit;
-  private Integer desiredResource;
+  private Double resourceDeficit;
+  private Double desiredResource;
 
   public SRTFAppAttempt(Configuration posumConf, ApplicationAttemptId applicationAttemptId, String user, Queue queue, ActiveUsersManager activeUsersManager, RMContext rmContext) {
     super(posumConf, applicationAttemptId, user, queue, activeUsersManager, rmContext);
   }
 
-  public SRTFAppAttempt(ExtCaAppAttempt inner) {
+  public SRTFAppAttempt(SQSAppAttempt inner) {
     super(inner);
   }
 
@@ -47,14 +47,14 @@ public class SRTFAppAttempt extends ExtCaAppAttempt {
 
   @Override
   public synchronized void transferStateFromPreviousAttempt(SchedulerApplicationAttempt appAttempt) {
-    logger.debug("Transfering state from previous attempt " + appAttempt.getApplicationAttemptId());
+    logger.debug("Transferring state from previous attempt " + appAttempt.getApplicationAttemptId());
     super.transferStateFromPreviousAttempt(appAttempt);
     if (appAttempt instanceof SRTFAppAttempt) {
       SRTFAppAttempt srtfApp = (SRTFAppAttempt) appAttempt;
       setSubmitTime(srtfApp.getSubmitTime());
       setJobId(srtfApp.getJobId());
       setTotalWork(srtfApp.getTotalWork());
-      setRemainingWork(srtfApp.getTotalWork());
+      setRemainingWork(srtfApp.getRemainingWork());
       setResourceDeficit(srtfApp.getResourceDeficit());
     }
   }
@@ -83,37 +83,29 @@ public class SRTFAppAttempt extends ExtCaAppAttempt {
     this.remainingWork = remainingWork;
   }
 
-  public Integer getResourceDeficit() {
-    return resourceDeficit;
-  }
-
-  public void setResourceDeficit(Integer resourceDeficit) {
-    this.resourceDeficit = resourceDeficit;
-  }
-
   public Long getRemainingTime(Resource minAllocation) {
+    if (remainingWork == null || getCurrentConsumption().getMemory() == 0)
+      return null;
     Integer currentSlots = getCurrentConsumption().getMemory() / minAllocation.getMemory();
-    return currentSlots == 0 ? Long.MAX_VALUE : remainingWork / currentSlots;
+    return remainingWork / currentSlots;
   }
 
   public void calculateDeficit(Resource minAllocation, Resource maxResource, Double normalizer) {
     // if there is not enough information, assign at least a slot in order to start
-    Double desired = new Integer(minAllocation.getMemory()).doubleValue();
-    if (remainingWork != null && totalWork != null) {
-      // we have information
-      Long remainingTime = getRemainingTime(minAllocation);
+    double desired = Integer.valueOf(minAllocation.getMemory()).doubleValue();
+    Long remainingTime = getRemainingTime(minAllocation);
+    if (remainingTime != null && totalWork != null) {
       // calculate resource share according to remaining time
       desired = 1.0 / remainingTime / normalizer * maxResource.getMemory();
       // adjust for starvation
-      long elapsedTime = System.currentTimeMillis() - orZero(submitTime);
-      Integer totalSlots = maxResource.getMemory() / minAllocation.getMemory();
-      long timeIfAlone = totalWork / totalSlots;
+      double elapsedTime = System.currentTimeMillis() - orZero(submitTime);
+      int totalSlots = maxResource.getMemory() / minAllocation.getMemory();
+      double timeIfAlone = totalWork / totalSlots;
       desired *= (elapsedTime + remainingTime) / timeIfAlone;
     }
-    desiredResource = desired.intValue();
+    desiredResource = desired;
     resourceDeficit = getCurrentConsumption().getMemory() - desiredResource;
     logger.debug(MessageFormat.format("New deficit for {0}: {1}", getJobId(), resourceDeficit));
-
   }
 
   public Long getTotalWork() {
@@ -124,4 +116,11 @@ public class SRTFAppAttempt extends ExtCaAppAttempt {
     this.totalWork = totalWork;
   }
 
+  public Double getResourceDeficit() {
+    return resourceDeficit;
+  }
+
+  public void setResourceDeficit(Double resourceDeficit) {
+    this.resourceDeficit = resourceDeficit;
+  }
 }
